# TDT4265_SnowPoleDetection

./: .gitignore  README.es.md  README.md  README.zh-CN.md  requirements.txt
configs/: combined.yaml  combined_full.yaml  road_poles_iphone.yaml  roadpoles_v1.yaml
scripts/: eval_idun.slurm  train_idun.slurm
src/: ensemble_wbf_v1.py  evaluate.py  link_msj_pseudo_into_dataset.py  predict.py  pseudo_label_msj.py  summarize_combined_ablation.py  train.py
src/rfdetr/: README.es.md  README.md  README.zh-CN.md  requirements.txt  rf_detr_workflow.py  train_iphone.py  train_v1.py  yolo_to_coco.py
submissions/v1_nms3_plain/: frame_000005.txt  frame_000115.txt  frame_000260.txt  frame_000265.txt  frame_000280.txt  frame_000285.txt  frame_000315.txt  frame_000485.txt  frame_000510.txt  frame_000570.txt  frame_001015.txt  frame_001305.txt  frame_001315.txt  frame_001345.txt  frame_001435.txt  frame_001575.txt  frame_001580.txt  frame_001605.txt  frame_001610.txt  frame_001615.txt  frame_001650.txt  frame_001660.txt  frame_001760.txt  frame_001815.txt  frame_001880.txt  frame_001940.txt  frame_002300.txt  frame_002310.txt  frame_003260.txt  frame_003485.txt  (+16 more)
uv/: README.md  predict_v1test.py  pyproject.toml  requirements.txt  rf_detr_workflow.py  train.py  yolo_to_coco.py
yamls/: yolov8-seg-AFPN-P345.yaml  yolov8-seg-C2f-CloAtt.yaml  yolov8-seg-C2f-DAttention.yaml  yolov8-seg-C2f-DCNV2-Dynamic.yaml  yolov8-seg-C2f-DCNV2.yaml  yolov8-seg-C2f-DCNV3.yaml  yolov8-seg-C2f-ODConv.yaml  yolov8-seg-CSwinTransformer.yaml  yolov8-seg-GhostHGNetV2.yaml  yolov8-seg-goldyolo.yaml
