[project]
name = "rfdetr-roadpoles"
version = "0.1.0"
description = "RF-DETR-B training for road pole detection (roadpoles_v1 + iPhone dataset)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.14.0",
    "rfdetr>=1.3.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
